--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.0.0",
+    "kolorist": "^1.8.0",
     "typescript": "^4.5.4"
   },
   "engines": {
